PHOENIX-6537 Fix CI pipeline and upgrade Yetus
update Yetus to 0.13
update Yetus personality to patch in mvn verify in the yetus module
update Yetus personality to not rebuild hbase twice
skip shaded and assembly modules during CI
update Jacoco maven plugin to 0.8.7
disable Jacoco for CI runs
increase test kill timeout for Failsafe
update Surefire/Failsafe maven plugin to 3.0.0-M5
refactor Junit @Category annotations for new Surefire/failsafe version
update OWASP maven plugin to 6.3.1
create /var/run in Yetus docker images for gpg
fix hbase table cleanup code in BaseTest